--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.deb*
-
+instalations
 # Created by https://www.toptal.com/developers/gitignore/api/powershell
 # Edit at https://www.toptal.com/developers/gitignore?templates=powershell
 
